--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
 alembic==1.15.2
 annotated-types==0.7.0
 anyio==4.8.0
-bcrypt==4.3.0
+bcrypt>=3.2,<4.1
 certifi==2025.1.31
 click==8.1.8
 colorama==0.4.6
@@ -23,7 +23,7 @@ markdown-it-py==3.0.0
 MarkupSafe==3.0.2
 mdurl==0.1.2
 orjson==3.10.15
-passlib==1.7.4
+passlib>=1.7,<1.8
 psycopg==3.2.5
 psycopg2-binary==2.9.10
 pyasn1==0.4.8
@@ -51,3 +51,6 @@ ujson==5.10.0
 uvicorn==0.34.0
 watchfiles==1.0.4
 websockets==15.0
+
+
+
