--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -1,13 +1,32 @@
 name: Build and Deploy Code
 
-on: [push, pull_request]
+on:
+  push:
+  pull_request:
+  workflow_dispatch:
 
 jobs:
-  job1:
+  build:
     runs-on: ubuntu-latest
+
     steps:
-      - name: pulling git repo
+      - name: Checkout repository
         uses: actions/checkout@v2
 
-      - name: say hi to gowtham
-        run: echo "hello gowtham"
+      - name: Set up Python
+        uses: actions/setup-python@v4
+        with:
+          python-version: '3.10'
+
+      - name: Install dependencies
+        run: |
+          python -m pip install --upgrade pip
+          pip install -r requirements.txt
+
+      - name: Run tests
+        run: |
+          echo "Running pytest..."
+          pytest
+
+      - name: Say hi to Gowtham
+        run: echo "Hello Gowtham 👋 - Build and Test completed!"
