--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -1,32 +1,12 @@
 name: Build and Deploy Code
 
-on:
-  push:
-  pull_request:
-  workflow_dispatch:
+on: [push, pull_request]
 
 jobs:
-  build:
+  job1:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
+      - name: pulling git repo
         uses: actions/checkout@v2
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
-        with:
-          python-version: '3.10'
-
-      - name: Install dependencies
-        run: |
-          python -m pip install --upgrade pip
-          pip install -r requirements.txt
-
-      - name: Run tests
-        run: |
-          echo "Running pytest..."
-          pytest
-
-      - name: Say hi to Gowtham
-        run: echo "Hello Gowtham 👋 - Build and Test completed!"
+      - name: say hi to sanjeev
+        run: echo "hello sanjeev"
