--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -4,6 +4,15 @@ on: [push, pull_request]
 
 jobs:
   job1:
+    env:
+      DATABASE_HOSTNAME: localhost
+      DATABASE_PORT: 5432
+      DATABASE_PASSWORD: Subbu@123
+      DATABASE_NAME: fastapi
+      DATABASE_USERNAME: postgres
+      SECRET_KEY: bjhgvdjdagjgdgc65646415446454djhcbsdjggd
+      ALGORITHM: HS256
+      ACCESS_TOKEN_EXPIRE_MINUTES: 60
     runs-on: ubuntu-latest
     steps:
       - name: pulling git repo
@@ -17,7 +26,7 @@ jobs:
       - name: install all dependencies
         run: pip install -r requirements.txt
       - name: test with pytest
-        run:
+        run: |
           pip install pytest
           pytest
 
