--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -10,7 +10,7 @@ jobs:
       DATABASE_HOSTNAME: ${{secrets.DATABASE_HOSTNAME}}
       DATABASE_PORT: ${{secrets.DATABASE_PORT}}
       DATABASE_PASSWORD: ${{secrets.DATABASE_PASSWORD}}
-      DATABASE_NAME: ${{secrets.DATABASE_NAME}}
+      DATABASE_NAME: ${{secrets.DATABASE_NAME}}_test
       DATABASE_USERNAME: ${{secrets.DATABASE_USERNAME}}
       SECRET_KEY: ${{secrets.SECRET_KEY}}
       ALGORITHM: ${{secrets.ALGORITHM}}
@@ -37,7 +37,7 @@ jobs:
       - name: Install python version 3.9
         uses: actions/setup-python@v2
         with:
-          python-versio: "3.9"
+          python-version: "3.9"
       - name: update pip
         run: python -m pip install --upgrade pip
       - name: install all dependencies
