--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -46,18 +46,35 @@ jobs:
         run: python -m pip install --upgrade pip
 
       - name: Install dependencies
-        run: pip install -r requirements.txt
+        run: |
+          pip install -r requirements.txt
+          pip install pytest
 
-      
+      - name: Wait for PostgreSQL to be ready
+        run: |
+          for i in {1..15}; do
+            if PGPASSWORD=${{ secrets.DATABASE_PASSWORD }} pg_isready -h localhost -p 5432 -U ${{ secrets.DATABASE_USERNAME }}; then
+              echo "Postgres is ready!"
+              break
+            else
+              echo "Waiting for postgres..."
+              sleep 2
+            fi
+          done
+
       - name: Create test database manually if not exists
         run: |
           sudo apt-get update
           sudo apt-get install -y postgresql-client
-          PGPASSWORD=${{ secrets.DATABASE_PASSWORD }} psql -h localhost -U ${{ secrets.DATABASE_USERNAME }} -p 5432 -tc "SELECT 1 FROM pg_database WHERE datname = '${{ secrets.DATABASE_NAME }}_test'" | grep -q 1 || \
-          PGPASSWORD=${{ secrets.DATABASE_PASSWORD }} psql -h localhost -U ${{ secrets.DATABASE_USERNAME }} -p 5432 -c "CREATE DATABASE ${{ secrets.DATABASE_NAME }}_test;"
 
+          echo "Checking if database exists..."
+          EXISTS=$(PGPASSWORD=${{ secrets.DATABASE_PASSWORD }} psql -h localhost -U ${{ secrets.DATABASE_USERNAME }} -p 5432 -tAc "SELECT 1 FROM pg_database WHERE datname='${{ secrets.DATABASE_NAME }}_test'")
+          if [ "$EXISTS" != "1" ]; then
+            echo "Database does not exist. Creating..."
+            PGPASSWORD=${{ secrets.DATABASE_PASSWORD }} psql -h localhost -U ${{ secrets.DATABASE_USERNAME }} -p 5432 -c "CREATE DATABASE ${{ secrets.DATABASE_NAME }}_test;"
+          else
+            echo "Database already exists."
+          fi
 
       - name: Run Pytest
-        run: |
-          pip install pytest
-          pytest
+        run: pytest
