--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -84,10 +84,19 @@ jobs:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
           password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
      
-      - name: Login to Docker Buildx
+      - name: Login to Docker Hub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_HUB_USERNAME }}
+          password: ${{ secrets.DOCKER_HUB_ACCESS_TOKEN }}
+
+      - name: Docker whoami
+        run: docker info
+
+      - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v1
-     
+
       - name: Build and push
         id: docker_build
         uses: docker/build-push-action@v2
@@ -99,8 +108,9 @@ jobs:
           tags: ${{ secrets.DOCKER_HUB_USERNAME }}/fastapi1:latest
           cache-from: type=local,src=/tmp/.buildx-cache
           cache-to: type=local,dest=/tmp/.buildx-cache
+
       - name: Image digest
         run: echo ${{ steps.docker_build.outputs.digest }}
 
-  
+        
 
