--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -113,19 +113,25 @@ jobs:
       #   run: echo ${{ steps.docker_build.outputs.digest }}
 
   deploy:
-    runs-on: ubuntu-latest
-    needs: [build]
-    environment:
-      name: production
+  runs-on: ubuntu-latest
+  needs: [build]
+  environment:
+    name: production
 
-    steps:
-      - name: pulling git repo
-        uses: actions/checkout@v2
-      - name: deploying to heroku
-        uses: akhileshns/heroku-deploy@v3.12.12 # This is the action
-        with:
-          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
-          heroku_app_name: ${{secrets.HEROKU_APP_NAME}} #Must be unique in Heroku
-          heroku_email: ${{secrets.HEROKU_EMAIL}}
-          usedocker: true
+  steps:
+    - name: Pulling Git repo
+      uses: actions/checkout@v2
+
+    - name: Install Heroku CLI
+      run: |
+        curl https://cli-assets.heroku.com/install.sh | sh
+
+    - name: Deploying to Heroku
+      uses: akhileshns/heroku-deploy@v3.12.12
+      with:
+        heroku_api_key: ${{ secrets.HEROKU_API_KEY }}
+        heroku_app_name: ${{ secrets.HEROKU_APP_NAME }}
+        heroku_email: ${{ secrets.HEROKU_EMAIL }}
+        usedocker: true
+
       
