--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -100,6 +100,9 @@ jobs:
         run: |
           curl https://cli-assets.heroku.com/install.sh | sh
 
+      - name: Set Heroku stack to container
+        run: heroku stack:set container --app ${{ secrets.HEROKU_APP_NAME }}
+
       - name: Deploying to Heroku
         uses: akhileshns/heroku-deploy@v3.12.12
         with:
