--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -111,6 +111,17 @@ jobs:
           heroku_email: ${{ secrets.HEROKU_EMAIL }}
           usedocker: true
 
+      - name: deploy to ubuntu server
+        uses: appleboy/ssh-action@master  
+        with:
+          host: ${{secret.PROD_HOST}}  
+          username: ${{secrets.PROD_USERNAME}}
+          password: ${{secrets.PROD_PASSWORD}}
+          script: |
+            cd app/src
+            git pull
+            sudo systemctl restart api
+
       
 # - name: Login to Docker Hub
       #   uses: docker/login-action@v1
@@ -139,3 +150,8 @@ jobs:
 
       # - name: Image digest
       #   run: echo ${{ steps.docker_build.outputs.digest }}
+
+      #login to our ubuntu
+      #cd/app/src
+      #git pull
+      #systemctl restart api
