--- a/.github/workflows/build_deploy.yml
+++ b/.github/workflows/build_deploy.yml
@@ -120,7 +120,7 @@ jobs:
           script: |
             cd app/src
             git pull
-            sudo systemctl restart api
+            echo ${{secrets.PROD_PASSWORD}} | sudo -S systemctl restart api
 
       
 # - name: Login to Docker Hub
